anyway From Mac

--- a/match3.html
+++ b/match3.html
@@ -78,6 +78,8 @@
                         <div v-if="key2 === 'id'">{{ key2 }}: {{ value2 }}
                             <!-- <button @click="fetch_update_when_to_send_recieve(value2)">fetch_update_when_to_send_recieve</button> -->
                             <button @click="fetch_read_match_data(value2)">fetch_read_match_data</button>
+                            <!-- href -->
+                            {{ url_for_reciver_user }}
                         </div>
                         <div v-if="key2 === 'receive_id'">{{ key2 }}: {{ value2 }}</div>
                         <div v-if="key2 === 'send_id'">{{ key2 }}: {{ value2 }}</div>
@@ -213,6 +215,7 @@
 const app = Vue.createApp({
 data() {
 return {
+    url_for_reciver_user: '',
     sample_data_ary: [],
     my_user_id: null,
     receive_matched: null,
@@ -765,46 +768,16 @@ try {
         }
     )
     const match_data_url2 = decodeURIComponent(this.sample_data_ary[0].all.match_data);
-    if(match_data_url2 === undefined || match_data_url2 === null || match_data_url2 === "" ||
-        !match_data_url2.match(/^(http|https):\/\/([-\w]+\.)+[-\w]+(\/[-\w./?%&=]*)?$/)
-            ) throw new Error('match_data_url2が不正です');
-
-    console.log("match_data_url2", match_data_url2);
-
-    this.ERROR_MESSAGE = "";
-} catch (error) {
-    this.ERROR_MESSAGE = error.message;
-}
-},
 
 
-async fetch_update_when_to_send_recieve(Match_Id){
-try {
-    const res = await fetch(this.endpoint + '/update_when_to_send_recieve', {method: 'POST',headers: {'Content-Type': 'application/json',},
-            body: JSON.stringify({match_id: Match_Id}),
-        });
-    const data = await res.json(); console.log(data);
-    // const data = await res.json(); console.log(data);
-    const match_data_chunk = data.message;
-    console.log(match_data_chunk);
-    const match_data_url = decodeURIComponent(match_data_chunk.match_data);
-    console.log(match_data_url);
-    sample_data_ary.push(
-        {
-            all: match_data_chunk,
-            send_id: match_data_chunk.send_id,
-            receive_id: match_data_chunk.receive_id,
-            when_to_send: match_data_chunk.when_to_send,
-            match_data: match_data_chunk.match_data,
-        }
-    )
-    // 別タブでURLを開く
-    if(match_data_url === undefined || match_data_url === null || match_data_url === "" ||
-        // url形式かどうかのチェック
-        !match_data_url.match(/^(http|https):\/\/([-\w]+\.)+[-\w]+(\/[-\w./?%&=]*)?$/)
-            ) throw new Error('match_data_urlが不正です');
-    // window.open(match_data_url, '_blank');
-    console.log(match_data_url);
+// stringのMatch_Id
+const str_Match_Id = String(Match_Id);
+    const match_data_url3 = match_data_url2 + "&before_recieve=true" + "&match_id=" + str_Match_Id;
+    this.sample_data_ary[0] = match_data_url3;
+    console.log(match_data_url3);
+    if(match_data_url3){
+        this.url_for_reciver_user = match_data_url3;
+    }
 
 
     this.ERROR_MESSAGE = "";
@@ -812,6 +785,8 @@ try {
     this.ERROR_MESSAGE = error.message;
 }
 },
+
+
 
 // read_matchesをfetchする関数
 async fetch_read_matches(){
