--- a/client6.html
+++ b/client6.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>client6</title>
     <script src="./vue@3.2.36.global.prod.js"></script>
     <script src="./peerjs.1.5.2.min.js"></script>
     <!-- <script src="./qrcode.js"></script> -->
