anyway From Mac

--- a/client6.html
+++ b/client6.html
@@ -100,6 +100,8 @@ get_param(){
     console.log("this.send_id", this.send_id);
     console.log("this.recieve_id", this.recieve_id);
     console.log("this.sender_or_reciver", this.sender_or_reciver);
+    // => 片方がchatにログイン(matchをwaitingに,peer_idをmatchesに挿入) => 対向にwaitingであることが表示 =>
+
     } catch (error) {
         console.log(error);
     }
