--- a/client6.html
+++ b/client6.html
@@ -40,6 +40,7 @@ let fuga = null;
 const app = Vue.createApp({
 data() {
 return {
+    sample: null,
     match_id: 0,
     send_id: 0,
     recieve_id: 0,
@@ -76,6 +77,7 @@ async fetch_update_when_to_send_waiting(peer_id_when_get_open){
         this.recieve_id,
         this.sender_or_reciver,
     ];
+    this.sample = param_data;
     console.log("fetch_update_when_to_send_waiting()", param_data);
 },
 send_text_fn(Text="sample_text"){
