--- a/client6.html
+++ b/client6.html
@@ -15,6 +15,8 @@
 </head>
 <body>
 <div id="app">
+    <!-- fetch_check_peer_id_or_change_it button -->
+    <button @click="fetch_check_peer_id_or_change_it()">fetch_check_peer_id_or_change_it</button>
     ページをリフレッシュした際にpeer id Aが変わるため、
     sender_peer_idもしくはreceiver_peer_idを更新
     バックグラウンドでpeer idがclientとserverに相違がないか確認し、
@@ -93,6 +95,26 @@ mounted() {
 beforeUpdated() {},
 updated() {},
 methods: {
+// ページをリフレッシュした際にpeer id Aが変わるため、 sender_peer_idもしくはreceiver_peer_idを更新 バックグラウンドでpeer idがclientとserverに相違がないか確認し、 相違があれば更新するようにコードを追加する
+// check_peer_id_or_change_it
+// app.post('/check_peer_id_or_change_it', (req, res) => {
+// const { match_id, sender_or_receiver, peer_id } = req.body;
+async fetch_check_peer_id_or_change_it(){
+    try {
+        console.log("fetch_check_peer_id_or_change_it");
+        const res = await fetch(this.endpoint + '/check_peer_id_or_change_it', {method: 'POST',headers: {'Content-Type': 'application/json',},
+                body: JSON.stringify({
+                    match_id: this.match_id,
+                    sender_or_receiver: this.sender_or_receiver,
+                    peer_id: this.peer_id_when_get_open,
+                }),
+            });
+        const data = await res.json(); console.log(data);
+        this.ERROR_MESSAGE = "";
+    } catch (error) {
+        this.ERROR_MESSAGE = error.message;
+    }
+},
 async fetch_hello(){
     const res = await fetch(this.endpoint + '/hello');
     const data = await res.json();
